--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,19 +1,35 @@
 <%- include('partials/header') -%>
-  <div class="container">
-    <div class="row justify-content-center mt-5">
-      <ul class="row list-unstyled">
-        <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].media.url%>">
-              <span><%= posts[i].user.userName %></span>
-              <span><%= posts[i].likes %></span>
-              <span><%= posts[i].title %></span>
-              <span><%= posts[i].caption %></span>
-            </a>
-          </li>
-        <% } %>
-        </ul>
-    </div>
-  </div>  
+<div class="container">
+  <div class="flex-column justify-content-center mt-5">
+    <ul class="col-12 col-md-8 col-lg-6 list-unstyled mx-auto">
+      <% for(var i=0; i<posts.length; i++) {%>
+      <li class="post-item mb-5">
+        <a href="/post/<%= posts[i]._id%>" class="post">
+          <div class="post-thumbnail">
+            <img class="img-fluid post-img" src="<%= posts[i].media.url %>" alt="Image">
+          </div>
+          <div class="post-info ml-3 d-flex flex-column">
+            <div class="d-flex align-items-center mb-1">
+              <img class="rounded-circle mr-3" src="/imgs/221477617_1801047823416161_2319731700073592842_n.jpg" alt="Profile picture" width="30" height="30">
+              <div class="d-flex flex-column">
+                <span class="font-weight-bold"><%= posts[i].user.userName %></span>
+                <span class="text-muted"><%= posts[i].createdAt.toDateString() %></span>
+              </div>
+            </div>
+            <div class="mb-3">
+              <span class="font-weight-bold mr-1"><%= posts[i].likes %></span>
+              <span class="text-muted">likes</span>
+              <span class="font-weight-bold mr-1"><%= posts[i].title %></span>
+              <span class="font-weight-bold mr-1"><%= posts[i].caption %></span>
+            </div>
+          </div>
+        </a>
+      </li>
+      <% } %>
+    </ul>
+  </div>
+</div>
+
 <%- include('partials/footer') -%>
+
+
