--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,11 +27,14 @@
   </head>
   <body>
     <header class="container">
-      <div class="text-center">
-        <h1 class=""><a href="/feed">GYMSTATS</a></h1>
-        <span class=""><a href="/profile">profile</a></span>
-
+      <div class="header">
+        <h1 class="logo"><a href="/feed">GYMSTATS</a></h1>
+        <div class="links">
+          <span class="profile"><a href="/profile">profile</a></span>
+          <span class="post"><a href="/postmenu">post +</a></span>
+        </div>
       </div>
     </header>
   </body>
+  
 </html>
