--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,31 +2,13 @@
 
 <div class="container">
   <div class="column mt-5">
-    <div class="col-6">
+    <div>
       <div>
         <p><strong>User Name</strong>: <%= user.userName %></p>
         <p><strong>Email</strong>: <%= user.email %></p>
         <a href="/logout" class="col-3 btn btn-primary">Logout</a>
       </div>
-      <div class="mt-5">
-        <h2>Add a post</h2>
-        <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-          <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
-            <input type="text" class="form-control" id="title" name="title" required>
-          </div>
-          <div class="mb-3">
-            <label for="caption" class="form-label">Caption</label>
-            <textarea class="form-control" id="caption" name="caption" required></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="mediaUpload" class="form-label">Media (Image or Video)</label>
-            <input type="file" class="form-control" id="mediaUpload" name="media">
-          </div>
-          <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-        </form>
-      </div>
-    </div>
+ 
     <div class="col-0">
       <ul class="row list-unstyled" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
         <% for(var i=0; i<posts.length; i++) {%>
