--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,19 @@
+a {
+    color: #262626;
+    text-decoration: none;
+  }
+
+.container{
+    padding: 0px;
+}
+
 .post-item {
     background-color: #fff;
-    border: 1px solid #dbdbdb;
+    /* border: 1px solid #dbdbdb; */
     border-radius: 3px;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
   
   .post-item:hover {
@@ -55,4 +64,44 @@
   }
   .row{
     --bs-gutter-x: 0!important;
+  }
+
+
+  .header {
+    background-color: #fff;
+    border-bottom: 1px solid #dbdbdb;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+  }
+  
+  .logo {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-right: auto;
+  }
+  
+  .links {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .links span {
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  .links span a {
+    color: #262626;
+    text-decoration: none;
+  }
+  
+  @media (min-width: 1000px){
+    .container{
+        max-width: 960px;
+    }
   }
