--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+.profile-grid {
+    transform: rotate(180deg);
+}
+.profile-grid > li {
+    transform: rotate(-180deg);
+}
+
 a {
     color: #262626;
     text-decoration: none;
@@ -6,7 +13,7 @@ a {
 .container{
     padding: 0px;
 }
-
+.grid { grid-template-areas: b a;}
 .post-item {
     background-color: #fff;
     /* border: 1px solid #dbdbdb; */
