--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,7 +10,7 @@
       </div>
  
     <div class="col-0">
-      <ul class="row list-unstyled" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
+      <ul class="row list-unstyled profile-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
         <% for(var i=0; i<posts.length; i++) {%>
         <li style="width: 100%;">
           <a href="/post/<%= posts[i]._id%>" style="display: block; position: relative; padding-bottom: 100%; height: 0;">
