--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
   <body>
     <header class="container">
       <div class="header">
-        <h1 class="logo"><a href="/feed">GYMSTATS</a></h1>
+        <h1 class="logo"><a href="/feed">Gymstats</a></h1>
         <div class="links">
           <span class="profile"><a href="/profile">profile</a></span>
           <span class="post"><a href="/postmenu">post +</a></span>
