--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,7 @@
   <div class="column mt-5">
     <div>
       <div>
-        <p><strong>User Name</strong>: <%= user.userName %></p>
+        <p><strong>User Name</strong>: <%= user.userName.toLowerCase() %></p>
         <p><strong>Email</strong>: <%= user.email %></p>
         <a href="/logout" class="col-3 btn btn-primary">Logout</a>
       </div>
