fixed not being able to delete own post

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
-.profile-grid {
+/* .profile-grid {
     transform: rotate(180deg);
 }
 .profile-grid > li {
     transform: rotate(-180deg);
-}
+} */
 
 a {
     color: #262626;
