--- a/views/post.ejs
+++ b/views/post.ejs
@@ -29,7 +29,7 @@
   </div>
   
   <div class="col-12 mt-3">
-    <p><strong><%= post.user.userName.toLowerCase() %></strong> <%= post.caption %></p>
+    <p><strong><%= userName %></strong> <%= post.caption %></p>
   </div>
 </div>
 
