--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
  
     <div class="col-0">
       <ul class="row list-unstyled profile-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
-        <% for(var i=0; i<posts.length; i++) {%>
+        <%for(var i= (posts.length-1); i>=0; i--){%>
         <li style="width: 100%;">
           <a href="/post/<%= posts[i]._id%>" style="display: block; position: relative; padding-bottom: 100%; height: 0;">
             <img class="img-fluid" src="<%= posts[i].media.url%>" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
