--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,8 +9,22 @@ a {
     color: #262626;
     text-decoration: none;
   }
+a:hover{
+    color: #0e0e0e;
+}
 
-
+.btn{
+    width: 100%;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #0e0e0e;
+    border-color: #383a3d;
+}
+.btn-primary:hover{
+    background-color: black;
+    border: none;
+}
 .container{
     padding: 0px;
     max-width: 500px!important;
@@ -108,6 +122,17 @@ a {
     color: #262626;
     text-decoration: none;
   }
+
+  .profile-info{
+    display: flex;
+    justify-content: space-between; 
+    padding: 2rem;
+  }
+  .profile-info > div{
+    display: flex;
+    flex-direction: column;
+  }
+
   
   @media (min-width: 1000px){
     .container{
