--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,10 @@ a {
 a:hover{
     color: #0e0e0e;
 }
-
+.index-btn{
+    width: 60%!important;
+    margin-bottom: 1rem;
+}
 .btn{
     width: 100%;
 }
