fixed post view

--- a/views/postmenu.ejs
+++ b/views/postmenu.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/header') -%>
 
 <div class="container">
-  <div class="column mt-5">
-    <div class="col-6">
-      <div class="mt-5">
+  <div class="column">
+    <div class="">
+      <div class="p-5">
         <h2>Add a post</h2>
         <form action="/post/createPost" enctype="multipart/form-data" method="POST">
           <div class="mb-3">
