--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') -%>
+<%- include('partials/indexheader') -%>
 
 <main class="container">
   <div class="row justify-content-center">
