--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
       
         <h2> <%= user.userName.toLowerCase() %></h2>
         <div class="">
-          <img class="rounded-circle mr-3" src="/imgs/Default-Profile-Picture-Transparent-Images.png" alt="Profile picture" width="100" height="100">
+          <img class="rounded-circle mr-3 mb-2" src="/imgs/Default-Profile-Picture-Transparent-Images.png" alt="Profile picture" width="100" height="100">
         <a href="/logout" class="col-3 btn btn-primary">Logout</a>
       </div>
     </div>
