--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -4,7 +4,7 @@
     <ul class="col-12 col-md-8 col-lg-6 list-unstyled mx-auto">
       <% for(var i=0; i<posts.length; i++) {%>
       <li class="post-item mb-5">
-        <div class="d-flex align-items-center mb-1">
+        <div class="d-flex align-items-center mb-1 p-2">
           <img class="rounded-circle mr-3" src="/imgs/Default-Profile-Picture-Transparent-Images.png" alt="Profile picture" width="30" height="30">
           <div class="d-flex flex-column">
             <span class="font-weight-bold"><%= posts[i].user.userName.toLowerCase() %></span>
@@ -14,7 +14,7 @@
           <div class="post-thumbnail">
             <img class="img-fluid post-img" src="<%= posts[i].media.url %>" alt="Image">
           </div>
-          <div class="post-info ml-3 d-flex flex-column">
+          <div class="post-info ml-3 d-flex flex-column p-2">
             <div class="d-flex align-items-center mb-1">
               <div class="d-flex flex-column">
                 <span class="font-weight-bold mr-1"><%= posts[i].caption %></span>
