--- a/views/post.ejs
+++ b/views/post.ejs
@@ -28,7 +28,7 @@
     <% } %>
   </div>
   
-  <div class="col-12 mt-3">
+  <div class="col-12 mt-3 p-2">
     <p><strong><%= userName %></strong> <%= post.caption %></p>
   </div>
 </div>
