--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@
       <div class="header">
         <h1 class="logo"><a href="/feed">Gymstats</a></h1>
         <div class="links">
-          <span class="profile"><a href="/profile">profile</a></span>
+          <span class="profile"><a href="/profile/<%= loggedUser._id %>">profile</a></span>
           <span class="post"><a href="/postmenu">post +</a></span>
         </div>
       </div>
