--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,12 +25,11 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
-    <header class="container">
-      <div class="header">
+  <body class="test">
+    <header class="container fixed-header">
+      <div class="header ">
         <h1 class="logo"><a href="/feed">Gymstats</a></h1>
         <div class="links">
-          <span class="profile"><a href="/profile/<%= loggedUser._id %>">profile</a></span>
           <span class="post"><a href="/postmenu">post +</a></span>
         </div>
       </div>
