--- a/views/partials/indexheader.ejs
+++ b/views/partials/indexheader.ejs
@@ -25,7 +25,7 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
+  <body class="pt-0">
     <header class="container">
       <div class="header">
         <h1 class="logo"><a href="/feed">Gymstats</a></h1>
