--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,9 @@
       <div class="header ">
         <h1 class="logo"><a href="/feed">Gymstats</a></h1>
         <div class="links">
-          <span class="post"><a href="/postmenu">post +</a></span>
+          <div class="post-button">
+            <a href="/postmenu"><i class="fas fa-plus"></i></a>
+          </div>
         </div>
       </div>
     </header>
