--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@ a:hover{
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
+  
 }
 
 .header {
@@ -30,7 +31,7 @@ a:hover{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
   }
 .footer {
     background-color: #fff;
@@ -38,7 +39,7 @@ a:hover{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.8rem;
+    padding: 0.8rem 1.5rem;
   }
 
 .index-btn{
@@ -57,10 +58,49 @@ a:hover{
     background-color: black;
     border: none;
 }
+.home-button {
+    border: none;
+    background-color: transparent;
+    color: #000;
+    font-size: 24px;
+  }
+  
+  .fa-home:before {
+    content: "\f015";
+  }
+  
+.profile-button {
+    border: none;
+    background-color: transparent;
+    color: #000;
+    font-size: 24px;
+  }
+  
+  .fa-user:before {
+    content: "\f007";
+  }
+
+.post-button {
+    border: none;
+    background-color: transparent;
+    color: #000;
+    font-size: 24px;
+    padding-right: 1rem;
+  }
+  
+  .fa-plus:before {
+    content: "\f067";
+  }
+  
+
+
 .container{
     padding: 0px;
     max-width: 500px!important;
 }
+
+
+
 .grid { grid-template-areas: b a;}
 .post-item {
     background-color: #fff;
@@ -133,7 +173,7 @@ a:hover{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    gap: 1rem;
+    gap: 4rem;
   }
   
   .links span {
