--- a/views/post.ejs
+++ b/views/post.ejs
@@ -8,15 +8,11 @@
       
   </div>
   
-  <% if(post.user == loggedUser.id){ %>
-    <div class="col-12 p-2">
-      <a href="/profile/<%= loggedUser._id %>" ><strong><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
-    </div>
-    <% } else {%>
+
   <div class="col-12 p-2">
-    <a href="/profile/<%= post.user %>" ><strong><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
+    <a href="/profile/<%= post.user._id %>" ><strong><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
   </div>
-  <% } %>
+
 
   <div class="row align-items-center justify-content-between mb-3">
     <div class="col-3">
@@ -29,15 +25,27 @@
     <div class="col-6 text-center">
       <span><%= post.likes %> likes</span>
     </div>
-    <% if(post.user == loggedUser.id){ %>
+    <% if(post.user._id.toString() == loggedUser._id.toString() && !post.catagory ){ %>
     <div class="col-3 text-right">
-      <form action="/post/deletePost/<%= post.id %>?_method=DELETE" method="POST">
+      <form action="/post/deletePost/<%= post._id %>?_method=DELETE" method="POST">
         <button class="btn btn-link p-0">
           <i class="far fa-trash-alt"></i>
         </button>
       </form>
     </div>
     <% } %>
+    <% if(post.user._id.toString() == loggedUser._id.toString() && post.catagory){ %>
+      <div class="col-3 text-right">
+        <form action="/pr/deletePR/<%= post._id %>?_method=DELETE" method="POST">
+          <button class="btn btn-link p-0">
+            <i class="far fa-trash-alt"></i>
+          </button>
+        </form>
+      </div>
+      <% } %>
+   
+ 
+
   </div>
 
 </div>
