--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,8 +134,8 @@ a:hover{
   }
   
   .post-thumbnail {
-    /* width: 100%; */
-    height: 600px;
+    width: 100%;
+    max-height: 800px;
     overflow: hidden;
   }
   
