--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,13 +18,18 @@
     
       </div>
   </div>
-
+  
     <div class="col-0">
       <ul class="row list-unstyled profile-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
         <%for(var i= (posts.length-1); i>=0; i--){%>
         <li style="width: 100%;">
           <a href="/post/<%= posts[i]._id%>" style="display: block; position: relative; padding-bottom: 100%; height: 0;">
-            <img class="img-fluid" src="<%= posts[i].media.url %>" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+          
+            <img class="img-fluid" src="<%= posts[i].media.thumbnailUrl %>" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+            <% if (posts[i].media.type === 'video') { %>
+              <i class="fa fa-play-circle" style="font-size: 35px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white;"></i>
+            <% } %>
+
           </a>
         </li>
         <% } %>
