--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,11 +3,9 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
        <!-- Check if the browser is Safari -->
-       <% if (post.media.type === "video" && browser.name === "safari") { %>
-          <img class="img-fluid post-img" src="<%= post.media.url %>" alt="Video">
-      <% } else if (post.media.type == "video") { %>
+      <%  if (post.media.type == "video") { %>
        
-          <video class="img-fluid post-img" src="<%= post.media.url %>" alt="Video" controls playsinline autoplay loop onerror="console.error('Error loading video:', this.error)">
+          <video class="img-fluid post-img" src="<%= post.media.url %>" alt="Video" controls playsinline mute loop autoplay onerror="console.error('Error loading video:', this.error)">
             <source src="<%= post.media.url %>" type="video/mp4">
           </video>
         
