--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ body{padding-top:3.5rem;
 padding-bottom: 3rem;}
 
 video{
-    object-fit: cover!important;
+    object-fit: contain!important;
 }
 a {
     color: #262626;
@@ -142,7 +142,7 @@ a:hover{
   .post-thumbnail img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:contain!important;
   }
   
   .post-info {
@@ -153,8 +153,9 @@ a:hover{
   }
   
   .post-img {
-    width: 100%;
     object-fit: cover;
+    height: 65vh;
+    width: 100%;
   }
   
   .rounded-circle {
@@ -220,3 +221,30 @@ a:hover{
 width: 100%;
 }
 }
+  @media(max-width: 350px){
+
+    html {
+      font-size: 80%!important;
+    }
+    body{
+      padding-top: 1.5rem;
+    }
+    .logo {
+      font-size: 1.5rem;
+
+    }
+    .post-button {
+      font-size: 18px;
+    }
+    .home-button {
+    
+      font-size: 18px;
+    }
+  .profile-button {
+  
+      font-size: 18px;
+    }
+    .profile-grid{
+      grid-template-columns: repeat(auto-fit, minmax(90px, 1fr))!important;
+    }
+  }
