--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,6 +22,7 @@
     <div class="col-0">
       <ul class="row list-unstyled profile-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
         <%for(var i= (posts.length-1); i>=0; i--){%>
+          <% console.log(posts) %>
         <li style="width: 100%;">
           <a href="/post/<%= posts[i]._id%>" style="display: block; position: relative; padding-bottom: 100%; height: 0;">
           
