--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ a:hover{
     top: 0;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 999;
 }
 
 .fixed-footer{
@@ -25,7 +26,7 @@ a:hover{
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-  
+    z-index: 999;
 }
 
 .header {
