fixed profile not respoding when no posts

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,8 +9,9 @@
       <h2> <%= user.userName.toLowerCase() %></h2>
       <div class="">
         <img class="rounded-circle mr-3 mb-2" src="/imgs/Default-Profile-Picture-Transparent-Images.png" alt="Profile picture" width="100" height="100">
-        
-  <% if(posts[0].user == loggedUser.id){ %>
+        <% console.log(user._id) %>
+        <% console.log(loggedUser._id) %>
+  <% if(user._id.toString() == loggedUser._id.toString()){ %>
       <a href="/logout" class="col-3 btn btn-primary">Logout</a>
     <% } else {%>
       <a href="#" class="col-3 btn btn-primary">Add Friend</a>
@@ -22,7 +23,7 @@
     <div class="col-0">
       <ul class="row list-unstyled profile-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
         <%for(var i= (posts.length-1); i>=0; i--){%>
-          <% console.log(posts) %>
+
         <li style="width: 100%;">
           <a href="/post/<%= posts[i]._id%>" style="display: block; position: relative; padding-bottom: 100%; height: 0;">
           
