--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -35,6 +35,11 @@
           </div>
           <div class="post-info ml-3 d-flex flex-column p-2">
             <div class="d-flex align-items-center mb-1">
+              <div class="mb-3">
+                <span class="font-weight-bold mr-1"><%= mergedArray[i].likes %></span>
+                <span class="text-muted">likes</span>
+              </div>
+            </div>
               <div class="d-flex flex-column">
                 <% if(mergedArray[i].catagory) {%>
                   <div class="d-flex flex-row align-items-center">
@@ -50,14 +55,11 @@
                 <a href="/post/<%= mergedArray[i]._id%>" class="post">
                   <span class="font-weight-bold mr-1"><%= mergedArray[i].caption %></span>
                   <span class="text-muted"><%= mergedArray[i].createdAt.toDateString() %></span>
+                  <span class="text-muted">view comments</span>
                 </a>
               </div>
             </div>
-            <div class="mb-3">
-              <span class="font-weight-bold mr-1"><%= mergedArray[i].likes %></span>
-              <span class="text-muted">likes</span>
-            </div>
-          </div>
+           
         </li>
         
       <% } %>
