--- a/views/post.ejs
+++ b/views/post.ejs
@@ -13,11 +13,10 @@
           <img class="img-fluid post-img" src="<%= post.media.url %>" alt="Image">
       <% } %>
       
-      
   </div>
   
 
-  <div class="col-12 p-2">
+  <div class="col-12 p-4">
     <a href="/profile/<%= post.user._id %>" ><strong><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
   </div>
 
@@ -63,6 +62,22 @@
    
  
 
+  </div>
+  <ul class="comments">
+    <% for(var i=0; i<comments.length; i++) {%>
+      <li class="">
+        <span><strong><%= comments[i].userName%></strong></span>:  <span><%= comments[i].comment%></span>
+      </li>
+    <% } %>
+  </ul>
+  <div class="">
+    <form action="/comment/createComment/<%=post._id%>" method="POST">
+      <div class="mb-3 d-flex justify-content-center w-70 comment-form">
+          <input type="text" class="form-control" id="comment" name="comment" placeholder="add comment" required>
+          <button class="w-50 btn-primary btn" type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      
+    </form>
   </div>
 
 </div>
